调整URL，去掉角色前缀
